[add]ipynb update

--- a/test.ipynb
+++ b/test.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "prerequisite-invitation",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "indie-overall",
+   "execution_count": 1,
+   "id": "cooperative-soundtrack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cellular-idaho",
+   "execution_count": 2,
+   "id": "valid-suspension",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "maritime-palestine",
+   "id": "sunset-istanbul",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ordinary-planet",
+   "id": "involved-flush",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "impaired-sucking",
+   "id": "certified-stanford",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "knowing-activation",
+   "id": "simple-likelihood",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accompanied-london",
+   "id": "handy-arthur",
    "metadata": {},
    "source": [
     "## define Path"
@@ -246,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "identified-start",
+   "execution_count": 9,
+   "id": "hearing-texas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-regard",
+   "id": "flexible-rebound",
    "metadata": {},
    "source": [
     "## train flow"
@@ -266,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "surprised-biography",
+   "execution_count": 11,
+   "id": "boolean-share",
    "metadata": {},
    "outputs": [
     {
@@ -275,11 +283,11 @@
      "output_type": "stream",
      "text": [
       "add_uniform: false\n",
-      "batch: 100\n",
+      "batch: 256\n",
       "cond_size: 512\n",
       "condition_scale: 1\n",
       "dataset: MNIST\n",
-      "epochs: 100\n",
+      "epochs: 40\n",
       "eval_data:\n",
       "    count: 300\n",
       "flow_modules: 32-32-32-32-32\n",
@@ -287,57 +295,64 @@
       "inputDim: 10\n",
       "linear_encode: false\n",
       "linear_encode_m: 50\n",
-      "lr: 0.001\n",
-      "lr_scheduler: ''\n",
+      "lr: 0.01\n",
+      "lr_scheduler: cos\n",
       "output_folder: jupyterTest\n",
       "position_encode: false\n",
       "position_encode_m: 50\n",
       "remark: ''\n",
-      "sample_count: 100\n",
-      "start_time: _04-24_12:50\n",
+      "sample_count: 256\n",
+      "start_time: _04-26_14:51\n",
       "time_seed: 0\n",
       "uniform_rate: 0.1\n",
       "uniform_scheduler: false\n",
       "var_scale: 3\n",
-      "workers: 8\n",
+      "workers: 32\n",
       "\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mandy-su\u001b[0m (use `wandb login --relogin` to force relogin)\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: wandb version 0.12.15 is available!  To upgrade, please run:\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m:  $ pip install wandb --upgrade\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Tracking run with wandb version 0.12.11\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in \u001b[35m\u001b[1m/mnt/train-data-5-hdd/andysu/DATA/project/UncertaintyFlow/wandb/run-20220424_045004-our1ays2\u001b[0m\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in \u001b[35m\u001b[1m/mnt/train-data-5-hdd/andysu/DATA/project/UncertaintyFlow/wandb/run-20220426_065149-2kb5vx93\u001b[0m\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Run \u001b[1m`wandb offline`\u001b[0m to turn off syncing.\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: Syncing run \u001b[33mjupyterTest\u001b[0m\n",
       "\u001b[34m\u001b[1mwandb\u001b[0m: ⭐️ View project at \u001b[34m\u001b[4mhttps://wandb.ai/andy-su/UncertaintyFlow\u001b[0m\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/andy-su/UncertaintyFlow/runs/our1ays2\u001b[0m\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/andy-su/UncertaintyFlow/runs/2kb5vx93\u001b[0m\n",
       "/home/me/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:498: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /pytorch/torch/csrc/utils/tensor_numpy.cpp:180.)\n",
       "  return torch.from_numpy(parsed.astype(m[2], copy=False)).view(*s)\n",
       "Ntrain: 60000, Nval: 10000\n",
       "Training T : 1.0\n",
       "Number of trainable parameters of Point CNF: 179537\n",
-      "  0%|                                                   | 0/100 [00:00<?, ?it/s]/home/me/.local/lib/python3.7/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  0%|                                                    | 0/40 [00:00<?, ?it/s]/home/me/.local/lib/python3.7/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
       "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
-      "logP: 74.92930:   1%|▏                      | 1/100 [06:53<11:22:38, 413.72s/it][W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "[W pthreadpool-cpp.cc:90] Warning: Leaking Caffe2 thread-pool after fork. (function pthreadpool)\n",
-      "logP: 64.11417:   1%|▏                      | 1/100 [07:33<11:22:38, 413.72s/it]^C\n"
+      "input_y :  torch.Size([256, 1, 10])\n",
+      "condition_X :  torch.Size([256, 512, 1])\n",
+      "delta_p:  torch.Size([256, 1, 1])\n",
+      "logP: 93.39051:   0%|                                    | 0/40 [00:04<?, ?it/s]input_y :  torch.Size([256, 1, 10])\n",
+      "condition_X :  torch.Size([256, 512, 1])\n",
+      "delta_p:  torch.Size([256, 1, 1])\n",
+      "logP: 1114.85583:   0%|                                  | 0/40 [00:05<?, ?it/s]input_y :  torch.Size([256, 1, 10])\n",
+      "condition_X :  torch.Size([256, 512, 1])\n",
+      "delta_p:  torch.Size([256, 1, 1])\n",
+      "logP: 460.06326:   0%|                                   | 0/40 [00:06<?, ?it/s]input_y :  torch.Size([256, 1, 10])\n",
+      "condition_X :  torch.Size([256, 512, 1])\n",
+      "delta_p:  torch.Size([256, 1, 1])\n",
+      "logP: 278.65302:   0%|                                   | 0/40 [00:07<?, ?it/s]input_y :  torch.Size([256, 1, 10])\n",
+      "condition_X :  torch.Size([256, 512, 1])\n",
+      "delta_p:  torch.Size([256, 1, 1])\n",
+      "^C\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "os.environ['MKL_THREADING_LAYER'] = 'GNU'\n",
-    "!python3 train_flow.py --config config.yaml --output_folder $modelName"
+    "!python3 train_image_flow.py --config ./config/config_mnist.yaml --output_folder $modelName --gpu 8"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "vulnerable-western",
+   "id": "beneficial-florence",
    "metadata": {},
    "source": [
     "## eval"
@@ -346,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "auburn-yahoo",
+   "id": "built-conflict",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-lodging",
+   "id": "functioning-stream",
    "metadata": {},
    "source": [
     "# visualize"
@@ -426,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electrical-faculty",
+   "id": "thrown-cattle",
    "metadata": {},
    "source": [
     "> wiggle m = 2 "
@@ -435,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "viral-starter",
+   "id": "accessory-giant",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-width",
+   "id": "earned-rover",
    "metadata": {},
    "source": [
     "> wiggle m = 30"
@@ -466,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "downtown-appeal",
+   "id": "great-giant",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "higher-sodium",
+   "id": "swedish-raise",
    "metadata": {},
    "source": [
     "> wiggle m = 100"
@@ -497,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "cultural-korea",
+   "id": "significant-factory",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-luther",
+   "id": "ranking-spyware",
    "metadata": {},
    "source": [
     "### my_1d m = 2"
@@ -528,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "racial-seafood",
+   "id": "theoretical-declaration",
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "effective-lobby",
+   "id": "frozen-lawrence",
    "metadata": {},
    "source": [
     "### my_1d m = 30"
@@ -559,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "useful-diabetes",
+   "id": "seventh-desert",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "generous-stockholm",
+   "id": "atmospheric-surfing",
    "metadata": {},
    "outputs": [],
    "source": []
