[add]ipynb and config

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "prerequisite-invitation",
+   "id": "realistic-watershed",
    "metadata": {},
    "source": [
     "# Test"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cooperative-soundtrack",
+   "execution_count": 17,
+   "id": "centered-forth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,8 @@
     "from PIL import Image\n",
     "from module.dun_datasets.image_loaders import get_image_loader\n",
     "import torch\n",
+    "%matplotlib inline\n",
+    "\n",
     "def show(image):\n",
     "#     image = Image.open(RESULT_IMAGE_PATH)\n",
     "    plt.figure(figsize= (12,12))\n",
@@ -30,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "valid-suspension",
+   "id": "differential-permit",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "sunset-istanbul",
+   "id": "minor-exercise",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "involved-flush",
+   "id": "focal-decade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "certified-stanford",
+   "id": "rubber-regard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "simple-likelihood",
+   "id": "digital-white",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handy-arthur",
+   "id": "occupied-shaft",
    "metadata": {},
    "source": [
     "## define Path"
@@ -255,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "hearing-texas",
+   "id": "funky-appreciation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-rebound",
+   "id": "fatty-blake",
    "metadata": {},
    "source": [
     "## train flow"
@@ -275,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "boolean-share",
+   "id": "proper-zimbabwe",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beneficial-florence",
+   "id": "devoted-niger",
    "metadata": {},
    "source": [
     "## eval"
@@ -361,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "built-conflict",
+   "id": "chronic-hammer",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "functioning-stream",
+   "id": "smoking-potter",
    "metadata": {},
    "source": [
     "# visualize"
@@ -441,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thrown-cattle",
+   "id": "applicable-gender",
    "metadata": {},
    "source": [
     "> wiggle m = 2 "
@@ -450,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "accessory-giant",
+   "id": "interior-listening",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "earned-rover",
+   "id": "renewable-supplement",
    "metadata": {},
    "source": [
     "> wiggle m = 30"
@@ -481,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "great-giant",
+   "id": "searching-confidentiality",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "swedish-raise",
+   "id": "valid-zimbabwe",
    "metadata": {},
    "source": [
     "> wiggle m = 100"
@@ -512,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "significant-factory",
+   "id": "sealed-stranger",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranking-spyware",
+   "id": "polyphonic-twenty",
    "metadata": {},
    "source": [
     "### my_1d m = 2"
@@ -543,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "theoretical-declaration",
+   "id": "animal-theme",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frozen-lawrence",
+   "id": "magnetic-patent",
    "metadata": {},
    "source": [
     "### my_1d m = 30"
@@ -574,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "seventh-desert",
+   "id": "widespread-universal",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "atmospheric-surfing",
+   "id": "amber-patient",
    "metadata": {},
    "outputs": [],
    "source": []
